--- a/app/views/discounts/index.html.erb
+++ b/app/views/discounts/index.html.erb
@@ -10,3 +10,10 @@
     </ul>
   </section>
 <% end %><br>
+
+<div class="holiday">
+  <h3>Upcoming Holidays</h3>
+  <% @upcoming_holidays.each do |holiday| %>
+    <li><%= holiday[:name] %>, <%= holiday[:date] %></li>
+  <% end %>
+</div>
