--- a/app/views/discounts/show.html.erb
+++ b/app/views/discounts/show.html.erb
@@ -7,3 +7,5 @@
 <p>Quantity Threshold:
   <%= @discount.quantity_threshold %>
 </p><br>
+
+<p><%= link_to 'Edit Discount', edit_merchant_discount_path(@merchant, @discount) %></p>
