--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -45,9 +45,15 @@
       <% @invoice.invoice_items.each do |i| %>
         <section id="the-status-<%= i.id %>">
           <tr class="tr">
+            <% if i.greatest_discount != nil %>
+            <td style="text-align:center"><%= link_to "Discount", merchant_discount_path(@merchant, i) %> - <%= i.item.name %></td>
+            <td style="text-align:center"><%= i.quantity %></td>
+            <td style="text-align:center">$<%= i.unit_price %></td>
+            <% else %>
             <td style="text-align:center"><%= i.item.name %></td>
             <td style="text-align:center"><%= i.quantity %></td>
             <td style="text-align:center">$<%= i.unit_price %></td>
+            <% end %>
             <td style="text-align:center"><%= form_with model: @invoice, url: merchant_invoice_path(@merchant, @invoice), method: :patch do |f| %>
                                             <%= f.select :status, Invoice.statuses.keys, selected: "#{@invoice.status}" %>
                                             <%= f.submit 'Update Invoice' %>
