--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -14,14 +14,12 @@
   <div class="row">
     <p class='mr-auto col-sm-5'>Favorite Customers</p>
 
-      <ul class='mr-auto col-sm-4'>
         <% @top_5_customers.each do |customer| %>
           <section id="customer-<%= customer.id %>">
               <li><%= customer.first_name %> <%= customer.last_name %>
               - <%= customer.number_of_transactions %> Purchases</li>
           </section>
-        <% end %>
-      </ul>
+        <% end %><br><br>
 
     <p class='ml-auto col-sm-5'>Items Ready to Ship</p>
   </div>
